--- a/ex01/estilo.css
+++ b/ex01/estilo.css
@@ -1,15 +1,17 @@
+p {
+    background-color: #00ff;
+    border-radius: 5px;
+}
+div {
+    background-color: #00ffff;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    border:3px solid darkgreen;
+}
+img {
+    border: 5px solid #ff0000;
+    border-radius: 30px;
+    overflow: hidden;
 
-#titulo, 
-.texto{
-    color: blue;
-    font-size: 25px;
 }
-#titulo{
-    font-weight: normal;
-}
-.texto{
-    font-weight: bold;
-}
-ol li {
-    color:pink;
-} 
