--- a/ex02/estilo02.css
+++ b/ex02/estilo02.css
@@ -1,7 +1,15 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
 }
 .exemplos{
-    border: 5px solid darkcyan;
-    padding: 10px 20px 10px 50px
-}               
+    background-color: rgb(61, 209, 93);
+    width: 400px;
+    height: 400px;
+    border: 5px solid black;
+    padding: 10px;
+    margin: 20px;
+} 
