--- a/ex01/estilo.css
+++ b/ex01/estilo.css
@@ -1,17 +1,9 @@
-p {
-    background-color: #00ff;
-    border-radius: 5px;
-}
-div {
-    background-color: #00ffff;
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-    border:3px solid darkgreen;
-}
-img {
-    border: 5px solid #ff0000;
-    border-radius: 30px;
-    overflow: hidden;
 
+
+.texto{
+    color: green;
+    font-size: 30px;
+}
+.texto:hover{
+    color: red;
 }
