--- a/ex05/paginas/formularios02.css
+++ b/ex05/paginas/formularios02.css
@@ -4,3 +4,28 @@
 body{
     padding:0;
 }
+fieldset{
+    background-color: aqua;
+    margin-bottom: 20px;
+    border: 2px solid rgb(118, 7, 245);
+}
+legend{
+    background-color: rgb(118, 7, 245);
+    color: white;
+    padding: 5px;
+
+}
+input[type=text]{
+    padding: 10px;
+    width: 1000px;
+    outline:0;
+}
+.termoslink{
+    text-decoration:none;
+    color:black;
+}
+.termoslink:hover{
+    text-decoration: underline;
+    color: rgb(118, 7, 245);
+
+}
