--- a/ex05/paginas/formularios02.css
+++ b/ex05/paginas/formularios02.css
@@ -3,9 +3,10 @@
 }
 body{
     padding:0;
+    background-color: rgb(56, 155, 247);
 }
 fieldset{
-    background-color: aqua;
+    background-color: rgb(63, 248, 248);
     margin-bottom: 20px;
     border: 2px solid rgb(118, 7, 245);
 }
@@ -34,8 +35,21 @@ input[type=text]{
     padding: 10px;
     color: aliceblue;
     border: 2px solid blueviolet;
+    border-radius: 50%;
 }
 .botao:hover{
     background-color:aqua;
     color: black;
+}
+.conteudo{
+    margin: 50px;
+    border:2px solid blueviolet;
+    border-radius: 5%;
+    padding: 20px;
+    background-color: rgb(60, 1, 71);
+}
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: white;
 }
