--- a/modulo4/estilos.css
+++ b/modulo4/estilos.css
@@ -1,11 +1,120 @@
+table, td{
+    border: 1px solid rgb(252, 247, 247);
+    color: aliceblue;
+}
+body{
+    display: flex;
+    margin: 0;
+    background-color: rgb(248, 241, 241);
+}
+h1{
+    color: rgb(3, 255, 192);
+    font-size: 100px;
+    text-align: center;
+    font-weight: bold;
+    
+}
+/* quadrado perfeito */
 
-.box{
-    width: 500px;
-    height: 400px;
-    background-color: rgb(126, 121, 121);
+@media(aspect-ratio:1/1){
+    body{
+        background-color: aquamarine;
+    }
+    h1{
+        color: white;
+    }
 }
-.box-interno{
-    width:50%;
-    height: 50%;
-    background-color: rgb(10, 10, 10);
+/* quadrado inperfeito */
+
+@media(min-aspect-ratio:3/1){
+    body{
+        background-color: rgb(142, 10, 250);
+    }
+    h1{
+        color: white;
+    }
 }
+@media(max-aspect-ratio: 3/1){
+    body{
+        background-color: rgb(31, 3, 109);
+    }
+    h1{
+        color: white;
+    }
+}
+/* direcionando divs em linhas e em colunas */
+div{
+    width:200px;
+    height:200px;
+    border: 2px solid black;
+}
+@media (orientation: landscape) {
+    body {
+        flex-direction: row;
+    }
+
+}
+@media (orientation: portrait){
+    body{
+        flex-direction: column;
+    }
+
+}
+/* textes responsividade */
+
+/* @media only print {
+
+    h1{
+        font-size: 20px;
+        font-weight: normal;
+        color:black;
+
+    }
+    table, td{
+        border: 1px solid black;
+        color: black;
+    }
+
+    
+} */
+
+/* @media(min-width:1000px) {
+
+    body{
+        background-color: rgb(189, 252, 16);
+
+    }
+    h1{
+        font-size:70px;
+    }
+
+}
+@media(min-width: 700px) and (max-width:1000px){
+    body{
+        background-color: blueviolet;
+    }
+    h1{
+        font-size:50px;
+    }
+    
+}
+@media(min-width:300px) and ( max-width:700px) {
+
+    body{
+        background-color: rgb(76, 133, 255);
+
+    }
+    h1{
+        font-size:30px;
+    }
+
+}
+ 
+/* @media(max-width:300px){
+
+    h1{
+        font-size: 10px;
+    }
+    
+} 
+*/ 
