--- a/ex07/tamanhos.css
+++ b/ex07/tamanhos.css
@@ -1,5 +1,60 @@
-body{
-    margin: 0px;
-}
 
- 
+body{
+    margin: 200px;
+}
+/* .container{
+    margin-right: 10px;
+    padding: 50px;
+    width: 420px;
+    height: 400px;
+    background:black;
+    background:linear-gradient(-90deg,rgb(21, 79, 236), black);
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-top-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: 5px solid #2704ec;
+}
+input{
+    width: 300px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 20px;
+    outline: 0;
+}
+input{
+
+}
+ div p{
+    margin-bottom: 0px;
+    margin-left: 40px;
+    color: white;
+    font-size: 30px;
+}
+.but{
+    padding: 10px;
+    width: 80px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid black;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.but:hover{
+    color: white;
+    background-color: rgb(52, 9, 240);
+    padding: 10px;
+    width: 80px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid black;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+} */
