--- a/ex08/estilo.css
+++ b/ex08/estilo.css
@@ -9,17 +9,19 @@ body{
 
     margin: auto;
     margin-top: 100px;
-    background-color: black;
+    background-color: rgb(253, 247, 247);
+    border: 1px solid black;
+    word-wrap: break-word;
     width: 150px;
     height: 150px;
     transition: all 1s linear;
 }
-.teste:hover{
+/* .teste:hover{
     width: 300px;
     border-radius: 75px;
     background-color: aqua;
     box-shadow: 0px 0px 30px black;
-}
+} */
 
 
 /* @keyframes moveAnimation {
