--- a/ex08/estilo.css
+++ b/ex08/estilo.css
@@ -5,7 +5,8 @@ body{
     margin: 0;
     padding: 0;
 }
-.teste{
+
+/* .teste{
 
     margin: auto;
     margin-top: 100px;
@@ -15,7 +16,7 @@ body{
     width: 150px;
     height: 150px;
     transition: all 1s linear;
-}
+} */
 /* .teste:hover{
     width: 300px;
     border-radius: 75px;
