--- a/site/assets/css/template.css
+++ b/site/assets/css/template.css
@@ -4,6 +4,7 @@
 body{
     margin: 0;
     padding: 0;
+    padding-bottom: 1000PX;
 }
 header{
     display: flex;
@@ -98,16 +99,106 @@ nav a:hover{
     background-color: #0079c7;
 }
 .banner3{
+    display: flex;
+    flex-direction: column;
     background-color: #2b4c99;
 }
 .banner_title{
     font-size: 21px;
+    width: 100%;
+    height: 20px;
+
+}
+.banner_desc{
+    font-size: 12px;
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+.banner_options a{ 
+    display: inline-block;
+   border: 1px solid white;
+   padding: 5px;
+   color:  white;
+   font-size: 13px;
+   text-decoration: none; 
+}
+.div1{
+    display: flex;
+    justify-content:space-between ;
+    
+    
+}
+.div2{
+    display: flex;
+    justify-content:space-between ;
+    
+    
+}
+.div3{
+    display: flex;
+    align-items: flex-end;
+    justify-content:space-between ;
+     
+    
+}
+.linha{
+    border-bottom: 1px solid #aaa7a7;
+
+}
+#geral{
+    display: flex;
+    justify-content: center;
+}
+#geral section {
+    flex:2;
+}
+#geral aside {
+    flex: 1;
+}
+.widget_title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.widget_title_text{
+    
+    color:black;
+    font-size:21px;
+    font-weight: bold;
+
+}
+.widget_title_bar{
+    width:50px;
+    height:2px;
+    background-color: #36a9e1;
+    margin-top: 10px;
+}
+.widget_body1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+
+}
+#dep{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
 
-
-
-
-
+.dep1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px;
+    background-color: #36a9e1;
+}
 
 
 
