--- a/site/assets/css/template.css
+++ b/site/assets/css/template.css
@@ -199,6 +199,33 @@ nav a:hover{
     height: 150px;
     background-color: #36a9e1;
 }
+.widget_body2{
+    display:flex;
+    flex-direction: column;
+    
+    color: #29282877;
+}
+.texto{
+   font-size: 12px;
+}
+.contato a{
+    text-decoration: underline;
+    
+}
+strong{
+    font-weight: bold;
+    color: black;
+}
+.contato{
+    display: flex;
+    font-weight: bold;
+    
+}
+#borde{
+    width: 100%;
+    height:1px;
+    background-color: #7777;
+}
 
 
 
