--- a/sites-desenvolvidos-no-curso/site4/pagina-produto/templates.css
+++ b/sites-desenvolvidos-no-curso/site4/pagina-produto/templates.css
@@ -4,6 +4,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    margin-bottom: 100px;
 }
 header {
     width: 100%;
@@ -61,21 +62,28 @@ nav a {
 }
 #geral{
     display: flex;
+    align-items: center;
+    width: 100%;
+    height: 700px;
     
 }
 .promocao{
     display: flex;
+    height: 400px;
     margin-left: 60px;
-    margin-top: 60px;
     flex-direction: column;
-    flex-wrap: wrap;
+}
+.promocao p {
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
 }
 #promocao {
     display: flex;
     text-transform: uppercase;
     text-shadow:  5px 5px 10px black;
     align-items: center;
-    font-size: 50px;
+    font-size: 70px;
     width: 500px;
     height: 250px;
     font-family: 'Roboto';
@@ -98,4 +106,76 @@ a{
     text-decoration: none;
     color: white;
 }
+.product{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 650px;  
+  
+}
+.div2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-right: 40px;
+    width: 100%;
+}
+#img1{
+    width: auto;
+    height: 600px;
+    border-radius: 10px;
+}
+#img2{
+    width: auto;
+    height: 400px;
+    border-radius: 10px;
+}
+.descricao {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 200px;
+    background-color: rgb(51, 15, 15);
+}
+.icons {
+    display: flex;
+    padding: 20px;
+    margin-left: 20px;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 80px;
+    height: 80px;
+}
+.texto {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    width: 400px;
+
+}
+.titulo{
+    display: flex;
+    color: aliceblue;
+    font-family: Arial;
+    font-size: 35px; 
+    
+    
+}
+.sub{
+    display: flex;
+    margin-top: 10px;
+    color: aliceblue;
+    font-family: Arial;
+    font-size: 15px; 
+}
+.texto p {
+    color: aliceblue;
+    font-family: Arial;
+    font-size: 15px;
+}
+
+
 
