--- a/sites-desenvolvidos-no-curso/site4/pagina-produto/templates.css
+++ b/sites-desenvolvidos-no-curso/site4/pagina-produto/templates.css
@@ -307,4 +307,35 @@ img {
     justify-content: center;
     margin-right: 10px;
 }
+.barnner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background:linear-gradient(90deg, #5c5c5c, rgb(188, 189, 247), rgb(77, 77, 238));
+    
+
+}
+.texto_venda {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   flex-direction: column;
+}
+.botao {
+    background-color: #5c5c5c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 60px;
+    padding: 5px;
+    font-size: 20px;
+    font-family: Arial;
+    border-radius: 40px;
+}
+h1 ,h2 {
+    font-size: 40px;
+    font-family:  'Playfair Display', serif;
+}
+
 
