--- a/sites-desenvolvidos-no-curso/site5/site-google/pesquisa.css
+++ b/sites-desenvolvidos-no-curso/site5/site-google/pesquisa.css
@@ -5,6 +5,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    
 }
 .header {
     display: flex;
@@ -74,6 +75,7 @@ input {
     width: 100%;
     align-items: center;
     padding: 5px;
+    
    
 }
  .icons img {
@@ -84,9 +86,8 @@ input {
 .menu_display {
     display: flex;
     justify-content: flex-end;
-    width: 500px;
+    margin-left: 340px;
     margin-right: 30px;
-
 }
 .menu {
     display: flex;
@@ -127,7 +128,7 @@ input {
 }
 #navbar {
     display: flex;
-    width: 900px;
+    width: 1000px;
     height: 50px;
 }
 .navbar {
@@ -137,15 +138,32 @@ input {
     width: 100%;
     margin-bottom: 21px;
 }
+.navbar img {
+    width: 15px;
+    height: 15px;
+    margin: 5px;
+    margin-bottom: 3px;
+}
+.navbar svg {
+    margin: 4px;
+    margin-bottom: 0px;
+}
+.navbar #mais {
+    margin-left: 2px;
+    margin: 4px;
+    margin-bottom: 0px;
+}
 .navbar a {
     display: flex;
     text-decoration: none;
-    color: #929292;
+    color: #545454;
     align-items:flex-end;
     font-size: 16px;
     justify-content: space-between;
-    margin-right: 10px;
     padding: 10px;
+}
+.navbar a:hover{
+   color: #218ee2;
 }
 #blue {
     padding-bottom:6px;
@@ -153,4 +171,78 @@ input {
 }
 #ferramentas {
     margin-left: 30px;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-top: 20px;
+    width: 787px;
+    margin-left: 268px;
+    
+}
+.result {
+    display: flex;
+    flex-direction: row-reverse;
+    width:45%;
+    font-size:13px;
+    color: #545454;
+    
+}
+.titulo a {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #1A0DAB;
+    text-decoration: none;
+}
+.titulo a:hover {
+    text-decoration: underline;
+}
+.link {
+    display: flex;
+}
+.link a{
+    display: flex;
+    color: #006621;
+    font-size: 14px;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+.info {
+    color: #545454;
+    font-size: 14px;
+    margin-bottom: 5px;
+    line-height: 20px;
+}
+.pesquisa_rel {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    font-size: 16px;
+}
+.titulo_rel {
+    display: flex;
+    margin-bottom: 10px;
+}
+#nav_link_rel {
+    display: flex;
+    width: 70%;
+    justify-content: space-between;
+    
+    
+}
+.link_rel, #link_rel {
+    display: flex;
+    flex-direction: column;
+}
+.link_rel a {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #1A0DAB;
+    text-decoration: none;
 }
