--- a/exercicios-fixacao/ex11/templates.css
+++ b/exercicios-fixacao/ex11/templates.css
@@ -1,33 +1,22 @@
-p::first-letter {
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+table  {
+    border: 4px solid #ece8e8;
     font-size: 30px;
-    font-weight: bold;
-   
 }
-p::first-line {
-    background-color: yellow;
+tr:nth-child(1){
+    background-color:  #a8a4a4;
 }
-/* a seguir esses comandos fazem seleção (o segundo de baixo para cima) */
-div:nth-last-child(2){
-    /* background-color: blue; */
-    width: 100px;
-    height: 100px;
+tr:nth-child(2){
+    background-color: rgb(69, 247, 69);
 }
-/* a seguir esses comandos fazem seleção (o segundo de cima para baixo) */
-div:nth-child(2){
-    /* background-color: blue; */
-    width: 100px;
-    height: 100px;
+tr:nth-child(4){
+    background-color: rgb(69, 247, 69);
 }
-
-/* div:first-child {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+tr:nth-child(6){
+    background-color: rgb(69, 247, 69);
 }
-
-div:last-child {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-} */
-
-
-
