--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
@@ -396,37 +396,165 @@ header {
     background-color: #b28756;
 }
 
-/* .section-happy {
+.happy--area {
     display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-.section-happy {
-    width:100vw;
-    height: 100%; 
-    display: inline-flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: red;
-    max-width: 1140px;
-    margin: auto;
-    padding: 30px;
-
-
 }
 .section-team--avatar {
     width: 150px;
     height: auto;
 }
 .section-happy--name {
-    text-transform: uppercase;
+    padding: 5px;
     font-weight: 600;
     margin-top: 30px;
     font-size: 17px;
+    
 }
 .section-happy--role {
     font-size: 14px;
     margin-top: 5px;
+    margin-bottom: 20px;
     color: #999;
+}
+.section-p {
+    display: flex;
+    justify-content: center;
+    width: 550px;
+    text-align: center;
+    font-size: 12px;
+    color: #b3b3b3;
+    font-weight: 600;
+}
+.happy--area .slide-pointers {
+    margin-top: 30px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.happy--area .pointer {
+    width: 15px;
+    height: 15px;
+    border: 2px solid #b28756;
+    border-radius: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.happy--area .pointer.active {
+    background-color: #b28756;
+}
+
+.happy--bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;   
+}
+.bar--img {
+    display: inline-flex;
+    justify-content: center;
+    width: 100px;
+    margin: 30px;
+}
+#bar--conteudo {
+   border-top: 2px solid #d1d0d0;
+   border-bottom: 2px solid #d1d0d0;
+}
+#geral--bar {
+    display: flex;
+    background-color: #eeebeb;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 50px;
+
+}
+.default.light.persona {
+    background-color:#eeebeb ;
+}
+#geral--bar .slide--bar{
+    display: flex;  
+    max-width: 1140px; 
+}
+#geral--bar .slidearea--bar {
+    display: flex;
+    flex-direction: column;
+    justify-content:center ;
+    width: 250px;
+    height:400px ;
+    background-color: #fff;
+    margin: 10px;
+    
+}
+
+.section-bar--name {
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-top: 20px;
+}
+.dec--bar .section-bar--role {
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 10px;
+}
+.section-bar--mes {
+    font-size: 15px;
+    color: #333;
+ 
+}
+.dec--bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 250px;
+    height:500px;
+}
+.dec--bar-sub {
+    display:flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+#bar {
+    width:15px;
+    height: 2px;
+    background-color: #777;
+    margin: 5px;
+}
+.button.preco {
+    background-color: #333;
+}
+.button.active {
+    background-color: #b28756;
+}
+.slide--bar .button.preco:hover {
+    background-color: #b28756;
+}
+#titulo {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+.section-title--bar {
+    color: black;
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+.section-desc--bar {
+    color: #b8b6b6;
+    font-size: 12px;
+    font-weight: 600;
 }
