--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
@@ -788,3 +788,47 @@ span {
 }
 
 
+.default.light.form{
+    background-color: white;
+}
+.section-form {
+    display: flex;
+    justify-content: center;
+    height: 400px;
+}
+input {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 300px;
+    height: 30px;
+    
+}
+input::placeholder {
+    text-transform: uppercase;
+    color: #ccc;
+}
+#flex {
+    width: 300px;
+    margin-right: 20px;
+}
+.section-form .section-area-form01 {
+    display: flex;
+    flex: 1;
+}
+
+.section-form .section-area-form02 {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+   
+}
+.section-form .section-area-form02 input {
+    margin-top: 60px;
+    width: 100%;
+    height: 30px;
+}
+.button-form {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
