--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
@@ -608,7 +608,7 @@ header {
     
    
 }
-span {
+.conteudos--livros  span {
     font-size: 14px;
     text-transform: uppercase;
     
@@ -801,6 +801,7 @@ input {
     border-bottom: 1px solid #ccc;
     width: 300px;
     height: 30px;
+    outline: none;
     
 }
 input::placeholder {
@@ -810,6 +811,7 @@ input::placeholder {
 #flex {
     width: 300px;
     margin-right: 20px;
+    outline: none;
 }
 .section-form .section-area-form01 {
     display: flex;
@@ -832,3 +834,124 @@ input::placeholder {
     justify-content: center;
     margin-top: 20px;
 }
+form{
+    outline: none;
+}
+
+.section-map {
+    background-image: url('../images/mapa.jpg');
+    background-size: cover;
+    background-position: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    
+}
+.section-map--area {
+    width: 100vw ;
+    max-width: 1140px;
+    margin: auto;
+}
+.section-map--info {
+   width: 50%;
+   padding: 30px;
+   background-color: #fff;
+   color: #000; 
+}
+.section-map--info--item {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    
+}
+.section-map--info-item--img {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    background-color:#999;
+    border-radius:15px;
+    margin-right: 15px;
+}
+.section-map--info-item--img img {
+    width: 15px;
+    height: auto;
+}
+
+
+.container-flex--footer {
+    width: 100vw;
+    background-color: #000;
+}
+.section--flex--footer {
+    display: flex;
+    justify-content: center; 
+}
+.flex--footer {
+    display: flex;
+}
+.image--flex--footer {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    background-color:#333;
+    border-radius:15px;
+    margin-right: 15px;
+    margin-top: 40px;
+    
+}
+.image--flex--footer01 {
+    margin-top: 40px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    background-color: #b28756;
+    border-radius:15px;
+    margin-right: 15px;
+  
+}
+
+.text-footer {
+    width: 400px;
+    color: #555;
+    padding: 40px;
+    padding-bottom: 0;
+}
+.form-footer--flex {
+    background-color: #222;
+    width: 350px;
+    height: 200px;
+    padding: 50px;
+    margin-top: 40px;
+}
+.area-footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+}
+.area-footer a {
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    width: 130px;
+}
+.form-footer--flex input::placeholder {
+    background-color: #222;
+    
+    text-align: center;
+}
+.form-footer--flex input {
+    background-color: #222;
+}
+
+
+
