--- a/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
+++ b/sites-desenvolvidos-no-curso/site6/Projeto Awax/assets/css/style.css
@@ -28,6 +28,9 @@ header {
     display: flex;
     justify-content: flex-end;
 }
+.menu-opener {
+    display: none;
+}
 .logoimg img {
     width:80px;   
     height: 80px;
@@ -952,6 +955,223 @@ form{
 .form-footer--flex input {
     background-color: #222;
 }
+
+@media (min-width:450px) and (max-width:800px) {
+    .logo {
+        margin-left: 30px;
+    }
+    .menu-opener {
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+    }
+    nav {
+        display: none;
+        position: absolute;
+        z-index:99;
+        background-color: rgba(0,0,0,0.9);
+        width:70vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+
+    .menu ul a {
+        font-weight: bold;
+        height: 80px;
+        font-size: 27px;
+        margin-left: 50px;
+        border: 0px;
+    }
+
+    .menu li.active a {
+        border: 0px;
+        color: #b28756;
+    }
+
+
+    .section-aboutus {
+        flex-direction: column;
+    }
+    .section-aboutus--left {
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    .section-aboutus--right{
+        width: auto;
+    }
+    .section-services {
+        flex-wrap: wrap;
+        
+    }
+    .section-service {
+        min-width: 50%;
+        margin-bottom: 30px;
+    }
+    .section-service:first-child {
+        border-left:0;
+    }
+
+
+    .section-team {
+        max-width: 580px;
+    }
+
+
+    .section-map--info {
+        width: auto;
+    }
+    .section-map {
+       padding-left: 30px;
+       padding-right: 30px;
+    }
+    .section-map--area {
+        width: auto;
+    }
+    .section-map--info--item {
+        display: flex;
+        justify-content: start;
+        margin-bottom: 20px;
+    }
+    .section-map--info--item:last-child {
+        margin-bottom: 0;
+    }
+    .section--flex--footer {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
+
+
+
+@media (max-width:450px){
+    .logo {
+        margin-left: 30px;
+    }
+    .menu-opener {
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+    }
+    nav {
+        display: none;
+        position: absolute;
+        z-index:99;
+        background-color: rgba(0,0,0,0.9);
+        width:80vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+
+    .menu ul a {
+        font-weight: bold;
+        height: 60px;
+        font-size: 20px;
+        margin-left: 30px;
+        border: 0px;
+    }
+
+    .menu li.active a {
+        border: 0px;
+        color: #b28756;
+    }
+
+    .banner h1 {
+        font-size: 30px;
+    }
+    .banner h2 {
+        font-size: 17px;
+    }
+
+    .section-aboutus {
+        flex-direction: column;
+    }
+    .section-aboutus--left {
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    .section-aboutus--right{
+        margin-left: 30px;
+        margin-right: 30px;
+        width: auto;
+    }
+    .section-aboutus--right img {
+        width: 100%;
+    }
+
+
+    .section-services {
+        flex-wrap: wrap;
+        
+    }
+    .section-service {
+        min-width: 100%;
+        margin-bottom: 30px;
+    }
+    .section-service:first-child {
+        border-left:0;
+    }
+
+
+
+    .section-projects--filters {
+        margin-left: 30px;
+        margin-right: 30px;  
+    }
+    .section-projects--filters li {
+        font-size: 12px;
+    }
+    .sections-projects--photoarea {
+        width: 300px;
+    }
+    .sections-projects--photo {
+        width: 320px;
+        height:200px;
+    }
+
+    .section-team {
+        max-width: 280px;
+    }
+
+
+    .section-map--info {
+        width: auto;
+    }
+    .section-map {
+        padding: 0;
+        padding-bottom: 250px;
+    }
+    .section-map--area {
+        width: auto;
+    }
+    .section-map--info--item {
+        display: flex;
+        justify-content: start;
+        margin-bottom: 20px;
+    }
+    .section-map--info--item:last-child {
+        margin-bottom: 0;
+    }
+    .section--flex--footer {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
+
+
 
 
 
