--- a/sites-desenvolvidos-no-curso/site8/portifolio/assets/css/style.css
+++ b/sites-desenvolvidos-no-curso/site8/portifolio/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 header {
     display: flex;
@@ -16,6 +17,7 @@ header .logo {
     font-size: 23px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
 }
 header .menu {
     width: 40px;
@@ -44,7 +46,7 @@ header .menu-line {
 .container .rightside {
     flex: 1;
     background-image: url('../images/hero.jpg'); 
-    background-size: 100% auto;
+    background-size: cover;
     background-position: center top;
 
 }
@@ -68,6 +70,15 @@ header .menu-line {
     font-weight: bold;
     box-shadow: 0px 0px 10px #333;
     border-radius:5px;
+    margin-right: 10px;
+
+}
+.container .info .buttons a.light {
+    color: white;
+    background-color: #3b576b;
+}
+.container .info .buttons a:hover {
+    opacity: 0.8;
 }
 .container .info .name {
     font-weight:bold;
@@ -80,4 +91,50 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+    padding: 20px;
+    color:white;
+    font-size: 13px;
+}
+footer a {
+    color: white;
+}
+@media (max-width:850px) {
+    header {
+        position: initial;
+        background-color: #3b576b;
+    }
+    header .menu-line {
+        background-color: white;
+    }
+    .container {
+        flex-direction: column;
+    }
+    .container .leftside {
+        justify-content: center;
+        text-align: center;
+        flex: none;
+        padding: 30px 20px;
+    }
+    footer {
+        position: initial;
+        color: #333;
+        font-size: 16px;
+
+    }
+    footer a {
+        color: #333;
+    }
+
+    
+}
+
+@media (max-width:450px) {
+    .container .leftside .info .name {
+        font-size:50px;
+    }
+    .container .leftside .info .buttons a{
+        display: block;
+        margin-bottom: 20px;
+
+    }
 }
